# OMPEval

./: .travis.yml  CMakeLists.txt  CardRange.cpp  CardRange.h  EquityCalculator.cpp  EquityCalculator.h  Makefile  MultiRange.cpp  MultiRange.h  OMPEval.cpp  OMPEval.h  README.md  Random.h  benchmark.cpp  main.cpp  ompeval.cpp  test.cpp  util.h
OMPEval/: LICENSE.txt  Makefile  README.md  test.cpp
OMPEval/omp/: CardRange.h  CombinedRange.h  HandEvaluator.h
OMPEval/ttest/: ttest.h
libdivide/: libdivide.h
omp/: CardRange.cpp  CardRange.h  CombinedRange.cpp  CombinedRange.h  Constants.h  EquityCalculator.cpp  EquityCalculator.h  Hand.h  HandEvaluator.cpp  HandEvaluator.h  MultiRange.cpp  MultiRange.h  OffsetTable.hxx  Random.h  Util.h
ttest/: ttest.h
